--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    background-color: darkgray;
 }
 
 section.board {
@@ -12,8 +14,15 @@ section.board {
 }
 
 div {
-    border: 3px solid black;
+    border: 3px solid rgb(45, 45, 45);
     font-size: 8vmin;
     text-align: center;
     vertical-align: middle;
+}
+h1 {
+    font-family: 'Rowdies', cursive;
+    color: rgb(29, 158, 158)
+}
+h2 {
+    font-family: 'Rowdies', cursive;
 }
