--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ div {
     font-size: 8vmin;
     text-align: center;
     vertical-align: middle;
+    box-shadow: inset 0.05em 0.05em 0.05em 0 rgba(255,255,255,0.5), inset -0.05em -0.05em 0.05em 0 rgba(0,0,0,0.5);
 }
 h1 {
     font-family: 'Rowdies', cursive;
